--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5297,6 +5297,7 @@ del {
     padding: 39px 16px;
     font-weight: 400;
     display: block;
+    background-color: var(--bg-color);
     font-size: 16px;
     -webkit-transition: .3s;
     -moz-transition: .3s;
